# corhpex-share

./: README.md  __init__.py
corhpex/: BaseExplorer.py  BayesianOptimExplorer.py  Configuration.py  ExhaustiveExplorer.py  LikwidAggregator.py  README.md  main.py  space_iterators.py  spacex.py
example/: README.md  cp-plots.py  main.py  plot.py  prefetchers_conf.py  run_benchmarks.sh
example/configs/: cp.toml
example/cp/: Benchmark.cc  Benchmark.h  CMakeLists.txt  CapillaryPressureLaw.cc  CapillaryPressureLaw.h  main.cc  types.h
example/hpc/: e_freq.sh  execution_description.csv  freq.sh  freq_generator.sh  p_freq.sh  reset_freq.sh  setup.py  test-all-codes.toml  test-one-code-bo-BT.toml  test-one-code-bo-SP.toml  test-one-code-bo-no-likwid.toml  test-one-code-bo-rodinia-kmeans.toml  test-one-code-bo-rodinia-streamcluster.toml  test-one-code-bo.toml
example/hpc/Blackscholes/: Makefile  run.sh
example/hpc/HACCmk/: Makefile  main.c
example/hpc/IS/IS/: run.sh
example/hpc/IS/config/: make.def
example/hpc/NPB3.0-omp-C/BT/: run.sh
example/hpc/NPB3.0-omp-C/CG/: run.sh
example/hpc/NPB3.0-omp-C/EP/: run.sh
example/hpc/NPB3.0-omp-C/FT/: run.sh
example/hpc/NPB3.0-omp-C/LU/: run.sh
example/hpc/NPB3.0-omp-C/MG/: run.sh
example/hpc/NPB3.0-omp-C/SP/: run.sh
example/hpc/NPB3.0-omp-C/config/: make.def
example/hpc/clomp_v1.2/: Makefile  run.sh
example/hpc/lulesh2.0.3/: Makefile  run.sh
example/hpc/profile/: Makefile  energy.c  energy.h  initialization.c  initialization.h
src/: BaseAggregator.py  BaseExplorer.py  BayesianOptimExplorer.py  ComputedAggregator.py  Configuration.py  ExhaustiveExplorer.py  GAExplorer.py  LikwidAggregator.py  MetaAggregator.py  SimpleAggregator.py  interface.py  main.py  option.py  space_iterators.py  utils.py
thread-binding-generator/: Makefile  main.c
(+45 files in other folders)
